JDK 17 adaptations